# pyqt-color-picker

./: .gitignore  Makefile  README.md  main.py  main.spec  pyproject.toml  requirements-build.txt  ui.py
.github/workflows/: build.yml
assets/: icon.icns  main.ui
