[tool.poetry]
authors = ["Oleksandr Korol <oleksandr.korol@coaxsoft.com>"]
description = ""
name = "pyqt-color-picker"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
PyQt6 = "^6.5.0"
python = ">=3.11,<3.12"
qt-material = "^2.14"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.269"

# Ruff settings
[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
ignore = []
select = ["E", "F", "W", "I", "C4", "Q", "SIM", "RUF", "PLW", "PIE", "COM"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "_build",
  "dist",
  "venv",
  ".venv",
  ".data",
  ".env",
]
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py311"
[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
